# cs224w-project

./: .gitignore  LICENSE  LINK_PREDICTION_README.md  README.md  check_dataset.py  load_full_dataset.py  pyproject.toml  test_all_tweets.py  test_link_prediction_setup.py  test_updated_parser.py  train_link_prediction.py  verify_dataset.py  visualize.py
examples/: basic_usage.py  graph_builder_usage.py  quick_visualization.py  visualization_example.py  visualize_thread.py
model/: model.ipynb
outputs/: args.json  best_model.pt  checkpoint_epoch_10.pt  checkpoint_epoch_20.pt  checkpoint_epoch_30.pt  checkpoint_epoch_40.pt  checkpoint_epoch_50.pt  checkpoint_epoch_60.pt  results.json
src/: __init__.py  features.py  graph_builder.py  het_gat_model.py  link_prediction_dataset.py  models.py  parsers.py  pyg_dataset.py
tests/: __init__.py  test_features.py  test_parsers.py
